--- a/HTML/Playlist.html
+++ b/HTML/Playlist.html
@@ -3,8 +3,8 @@
 <!-- Playlist -->
 
 <head>
-    <link rel="stylesheet" href="/CSS/Playlist.css">
-    <script src="/JS/Playlist.js" defer></script>
+    <link rel="stylesheet" href="../CSS/Playlist.css">
+    <script src="../JS/Playlist.js" defer></script>
 </head>
 
 <body>
@@ -16,12 +16,12 @@
             </div>
             <h2></h2>
             <div class="GButtons" width="320" height="240">
-                <a href="/HTML/Interface.html">
+                <a href="../HTML/Interface.html">
                     <button id="btnHome">
                         <p>Home</p>
                     </button>
                 </a>
-                <a href="/HTML/Playlist.html">
+                <a href="../HTML/Playlist.html">
                     <button id="btnPlaylists">
                         <p>Playlist</p>
                     </button>
