fixed more urls

--- a/HTML/Interface.html
+++ b/HTML/Interface.html
@@ -3,9 +3,9 @@
 <!-- Elfin, a song recommendation app/web -->
 
 <head>
-    <link rel="stylesheet" href="/CSS/Interface.css">
-    <script src="/JS/ai.js" defer></script>
-    <script src="/JS/Interface.js" defer></script>
+    <link rel="stylesheet" href="../CSS/Interface.css">
+    <script src="../JS/ai.js" defer></script>
+    <script src="../JS/Interface.js" defer></script>
 </head>
 
 <body>
