--- a/HTML/Interface.html
+++ b/HTML/Interface.html
@@ -63,13 +63,13 @@
         </div>
         <div id="Songs">
             <p> Nothing is generated yet </p>
+            <!-- <p> Nothing is generated yet </p>
             <p> Nothing is generated yet </p>
             <p> Nothing is generated yet </p>
             <p> Nothing is generated yet </p>
             <p> Nothing is generated yet </p>
             <p> Nothing is generated yet </p>
-            <p> Nothing is generated yet </p>
-            <p> Nothing is generated yet </p>
+            <p> Nothing is generated yet </p> -->
         </div>
     </div>
 </body>
